examples/bad/10-03-invalid-reference.lagger
int invalid(int &x){
    return x;
}

int main(){
    invalid(1);
    return 0;
}